# Server-client-comunication

DS_assignment1-master/: CMakeLists.txt  manifest.mf  rpc_message_storage.x
DS_assignment1-master/client/: client.java
DS_assignment1-master/include/: client_connector.h  linkedList_clients.h  linkedList_messages.h  linkedList_users.h  rpc_message_storage.h  socketio.h
DS_assignment1-master/lib/: client_connector.c  rpc_message_storage_xdr.c  socketio.c
DS_assignment1-master/server/server_main/: linkedList_clients.c  rpc_message_storage_clnt.c  server.c
DS_assignment1-master/server/server_storage/: linkedList_messages.c  linkedList_users.c  rpc_message_storage_server.c  rpc_message_storage_svc.c
DS_assignment1-master/web_service/: CapitalizationService.wsdl
DS_assignment1-master/web_service/capitalizationwebservice/: CapitalizationService.java  WebPublisher.java  manifest.mf
DS_assignment1-master/web_service/wsclient/: CapitalizationService.java  CapitalizationServiceService.java  Capitalize.java  CapitalizeResponse.java  ObjectFactory.java  package-info.java
